apps/base/wiki-js/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wiki-js-https
  namespace: wiki
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: wiki-js-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wiki.saldivar.io`)
      kind: Rule
      services:
        - name: wiki-js
          port: http
      middlewares:
        - name: security
          namespace: kube-system
